--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,10 @@
     "express": "~4.15.5",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
+    "sequelize": "^4.17.0",
     "serve-favicon": "~2.4.5"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^3.0.0"
   }
 }
