--- a/app/package.json
+++ b/app/package.json
@@ -12,9 +12,11 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
+    "graphql": "^0.11.7",
+    "graphql-server-express": "^1.2.0",
+    "graphql-tools": "^2.6.1",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
-    "mysql": "^2.15.0",
     "mysql2": "^1.4.2",
     "sequelize": "^4.17.0",
     "serve-favicon": "~2.4.5",
